# hindsight-2604200709

.claude-plugin/: marketplace.json
.github/workflows/: test.yml
docker/standalone/: start-all.sh  test-start-all.sh
hindsight-api-slim/hindsight_api/: config.py  mcp_tools.py  migrations.py
hindsight-api-slim/hindsight_api/api/: http.py
hindsight-api-slim/hindsight_api/engine/: cross_encoder.py  llm_wrapper.py  memory_engine.py
hindsight-api-slim/hindsight_api/worker/: poller.py
hindsight-api-slim/tests/: test_config_validation.py  test_consolidation_dedup.py  test_db_abstraction.py  test_extract_dry_run_http.py  test_fact_extraction_fact_type_prompt.py  test_llm_per_op_concurrency.py  test_mcp_tools.py  test_memory_curation.py  test_none_llm_provider.py  test_reranker_score_normalization.py  test_worker.py
hindsight-clients/go/: api_memory.go  model_bank_template_config.go  model_create_bank_request.go  model_observation_scopes.go
hindsight-docs/blog/: 2026-06-23-structuring-chat-logs-for-memory.md  authors.yml
hindsight-docs/docs-integrations/: paperclip.md
hindsight-docs/static/: openapi.json
hindsight-integrations/devin-desktop/: README.md  pyproject.toml
hindsight-integrations/devin-desktop/hindsight_devin_desktop/: __init__.py  cascade_hooks.py  cli.py  config.py  devin_local.py  global_rules.py  hook.py  managed_block.py  mcp_config.py  project.py  rules.py
hindsight-integrations/devin-desktop/tests/: conftest.py  test_cascade_hooks.py  test_cli.py  test_config.py  test_devin_local.py  test_e2e.py  test_global_rules.py  test_hook.py  test_managed_block.py  test_mcp_config.py  test_project.py  test_rules.py
hindsight-integrations/flowise/: package-lock.json
hindsight-integrations/litellm/: pyproject.toml
hindsight-integrations/paperclip/: README.md
(+35 files in other folders)
